2005-06-06  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/x11-color.scm: reformat. 

	* lily/ledger-line-engraver.cc (acknowledge_grob): create new
	LedgerLineSpanner if new StaffSymbol is found. 

	* lily/staff-symbol-engraver.cc (acknowledge_grob): also set
	staff-symbol for finishing staff. 

	* lily/GNUmakefile (OUT_DIST_FILES): don't dist Flex output

	* scm/output-svg.scm (setcolor): implement (re)setcolor with <g>
	change black to currentColor everywhere. This fixes color support
	in SVG.

2005-06-06  Carl Sorensen  <carldsorensen@comcast.net>

	* input/regression/fret-diagrams.ly: new file to test fret diagram
	capability

	* scm/output-tex.scm: remove white-dot and white-text

	* scm/output-ps.scm: remove white-dot and white-text

	* scm/fret-diagrams.scm (sans-serif-stencil-white): removed -- 
	using ly:stencil-in-color instead
	(draw-dots) : remove call to white-dot

2005-06-06  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* flower/memory-stream.cc (Memory_out_stream): remove fopencookie support.

	* ttftool/ttfps.c: use lily_cookie functions everywhere. 

	* flower/include/file-cookie.hh: new file. lily_cookie extension 

	* flower/file-cookie.cc: new file. lily_cookie extension.
	
2005-06-06  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/editor.scm (editor-command-template-alist): Add syn
	editor (Jaap [de Vos]).

2005-06-05  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/lilypond-ps2png.scm:
	* scm/ps-to-png.scm: New file.

	* scm/backend-library.scm (postscript->png): Use it.

	* scripts/lilypond-ps-to-png.py: Remove file.

	* python/lilylib.py (get_bbox, make_ps_images): Remove.

2005-06-03  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/auto-beam-engraver.cc (acknowledge_grob): remove dead code.

	* scm/auto-beam.scm (default-auto-beam-check): only forbid beam
	start on grace moment. Fixes autobeam-grace.ly.

	* lily/auto-beam-engraver.cc (process_acknowledged_grobs): don't
	process anything unless we're at the end of a pending beam. Fixes