@@ -192,4 +192,4 @@ ADD_INTERFACE (System_start_delimiter, "system-start-delimiter-interface",
 	       "The brace, bracket or bar in front of the system. "
 	       "It is implemented as a spanner.",
 	       "collapse-height thickness "
-	       "arch-height arch-angle arch-thick arch-width bracket-thick glyph");
+	       "glyph");
